# guile-cv

./: .gitignore  INSTALL  LICENSE  Makefile.am  NEWS  README  autogen.sh  configure.ac  cv.scm  pre-inst-env.in
am/: guile.mk
build-aux/: latex.scm
cv/: adds.scm  compose.scm  features.scm  filters.scm  histogram.scm  idata.scm  imgproc.scm  impex.scm  init.scm  kdata.scm  morphology.scm  properties.scm  segmentation.scm  support.scm  texture.scm  utils.scm
cv/support/: f32vector.scm  f64vector.scm  float.scm  g-export.scm  goops.scm  keyword.scm  latex.scm  libguile-cv.scm  modules.scm  pi.scm  push.scm  s32vector.scm  utils.scm
doc/: Makefile.am  api-abreviations.texi  api-cv-features.texi  api-cv-filters.texi  api-cv-idata.texi  api-cv-imgproc.texi  api-cv-impex.texi  api-cv-kdata.texi  api-cv-morphology.texi  api-cv-properties.texi  api-cv-segmentation.texi  api-cv-texture.texi  api-cv-utils.texi  api-overview.texi  api-support-modules.texi  api-support.texi  api.texi  cr-ip-features.texi  cr-ip-filters.texi  cr-ip-kdata.texi  cr-ip-segmentation.texi  cr-ip-texture.texi  cr-ip-utils.texi  cr-ip.texi  cr-ov-abreviations.texi  cr-ov-naming-conventions.texi  cr-ov.texi  cr-support-modules.texi  cr-support.texi  cr.texi  fdl.texi  guile-cv.texi  indices.texi  introduction.texi  preface.texi  using-guile-cv.texi  variables.texi  version.texi
doc/css/: manual.css
doc/images/: edx.tif
libguile-cv/: Makefile.am  libguile-cv.c  libguile-cv.h
m4/: guile-ext.m4  latex.m4  makeinfo.m4  vigra.m4  vigra_c.m4
meta/: guile-cv-1.0.pc.in
test-suite/: Makefile.am
test-suite/tests/: cv.scm  imgproc.scm  segmentation.scm  support.scm  texture.scm
